syntax = "proto3";
package goprocrypt_tests;
option go_package = "goprocrypt_tests";

message TestMsg {
    sfixed64 time = 1;
    int32 trialNo = 3;
    string msgtext = 5;
}